# gale

./: .gitignore  CLAUDE.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION_PRS.md  PUBLISHING.md  README.md  package.json
.claude/skills/open-migration-pr/: SKILL.md
.github/workflows/: ci.yml  compatibility.yml  release.yml
benchmarks/: README.md  benchmark.sh  generate-benchmark.sh  results.md  run-benchmark.sh
crates/gale_cli/: Cargo.toml
crates/gale_cli/src/: cache.rs  lib.rs
crates/gale_config/: Cargo.toml
crates/gale_config/src/: lib.rs
crates/gale_css_parser/: Cargo.toml
crates/gale_css_parser/src/: lib.rs  sass_to_scss.rs
crates/gale_diagnostics/: Cargo.toml
crates/gale_diagnostics/src/: lib.rs
crates/gale_formatter/: Cargo.toml
crates/gale_formatter/src/: lib.rs
crates/gale_linter/: Cargo.toml
crates/gale_linter/src/: data.rs  lib.rs  registry.rs  rule.rs  runner.rs  stylelint_version.rs
crates/gale_linter/src/rules/: alpha_value_notation.rs  annotation_no_unknown.rs  at_rule_allowed_list.rs  at_rule_descriptor_no_unknown.rs  at_rule_descriptor_value_no_unknown.rs  at_rule_disallowed_list.rs  at_rule_empty_line_before.rs  at_rule_no_deprecated.rs  at_rule_no_unknown.rs  at_rule_no_vendor_prefix.rs  at_rule_prelude_no_invalid.rs  at_rule_property_required_list.rs  block_no_empty.rs  block_no_redundant_nested_style_rules.rs  color_function_alias_notation.rs  color_function_notation.rs  color_hex_alpha.rs  color_hex_case.rs  color_hex_length.rs  color_named.rs  color_no_hex.rs  color_no_invalid_hex.rs  comment_empty_line_before.rs  comment_no_empty.rs  comment_pattern.rs  comment_whitespace_inside.rs  comment_word_disallowed_list.rs  container_name_pattern.rs  csstools_value_no_unknown_custom_properties.rs  custom_media_pattern.rs  custom_property_empty_line_before.rs  custom_property_no_missing_var_function.rs  custom_property_pattern.rs  declaration_block_no_duplicate_custom_properties.rs  declaration_block_no_duplicate_properties.rs  declaration_block_no_redundant_longhand_properties.rs  declaration_block_no_shorthand_property_overrides.rs  declaration_block_single_line_max_declarations.rs  declaration_empty_line_before.rs  declaration_no_important.rs  (+231 more)
crates/gale_lsp/: Cargo.toml
crates/gale_lsp/src/: lib.rs
docs/: index.html
editors/vscode/: .vscodeignore  README.md  package.json  tsconfig.json
editors/vscode/src/: extension.ts
npm/: README.md  index.cjs  index.js  index.mjs  install.js  package.json  test.mjs
npm/@gale-linter/cli-darwin-arm64/: package.json
npm/@gale-linter/cli-darwin-x64/: package.json
npm/@gale-linter/cli-linux-arm64/: package.json
npm/@gale-linter/cli-linux-arm64-musl/: package.json
npm/@gale-linter/cli-linux-x64/: package.json
npm/@gale-linter/cli-linux-x64-musl/: package.json
npm/@gale-linter/cli-win32-x64/: package.json
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-arm64/: package.json
npm/cli-linux-x64/: package.json
npm/cli-win32-arm64/: package.json
npm/cli-win32-x64/: package.json
npm/gale/: README.md  package.json
npm/gale-linter/: package.json
npm/scripts/: build-npm.sh
scripts/: build-npm.sh  generate-compatibility-matrix.py
src/: main.rs
test-fixtures/: empty-block.css
tests/differential/: .gitignore  README.md  migration_test.py  open_prs.py  repos.json  run.py
tests/stylelint-compat/: .gitignore  README.md  extract.mjs  run.py
website/: index.html
