[package]
name = "gale_config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Configuration loading for the Gale CSS linter"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
globset = { workspace = true }

[dev-dependencies]
tempfile = "3"
