[package]
name = "gale_linter"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core linting engine for the Gale CSS linter"

[dependencies]
gale_css_parser = { workspace = true }
gale_diagnostics = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1"
